# security_security_component_manager

./: BUILD.gn  README.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build  security_component.gni
config/: BUILD.gn
frameworks/: BUILD.gn
frameworks/common/include/: sec_comp_err.h  sec_comp_log.h  sec_comp_tool.h
frameworks/common/src/: sec_comp_tool.cpp
frameworks/enhance_adapter/include/: sec_comp_enhance_adapter.h
frameworks/enhance_adapter/src/: sec_comp_enhance_adapter.cpp
frameworks/security_component/include/: sec_comp_click_event_parcel.h
frameworks/security_component/src/: location_button.cpp  paste_button.cpp  save_button.cpp  sec_comp_base.cpp  sec_comp_click_event_parcel.cpp  sec_comp_rect.cpp
interfaces/inner_api/enhance_kits/: BUILD.gn
interfaces/inner_api/enhance_kits/include/: sec_comp_enhance_cfg_parcel.h  sec_comp_enhance_kit.h  sec_comp_enhance_kit_c.h
interfaces/inner_api/enhance_kits/src/: sec_comp_enhance_cfg_parcel.cpp  sec_comp_enhance_kit.cpp
interfaces/inner_api/enhance_kits/test/: BUILD.gn
interfaces/inner_api/enhance_kits/test/unittest/src/: sec_comp_enhance_test.cpp
interfaces/inner_api/security_component/: BUILD.gn
interfaces/inner_api/security_component/include/: i_sec_comp_probe.h  i_sec_comp_service.h  location_button.h  paste_button.h  save_button.h  sec_comp_base.h  sec_comp_click_event.h  sec_comp_client.h  sec_comp_info.h  sec_comp_kit.h  sec_comp_pattern.h  sec_comp_proxy.h  sec_comp_rect.h  sec_comp_ui_register.h  security_component_service_ipc_interface_code.h
interfaces/inner_api/security_component/src/: sec_comp_caller_authorization.cpp  sec_comp_client.cpp  sec_comp_death_recipient.cpp  sec_comp_kit.cpp  sec_comp_load_callback.cpp  sec_comp_proxy.cpp  sec_comp_ui_register.cpp
interfaces/inner_api/security_component/test/: BUILD.gn
services/security_component_service/sa/: BUILD.gn  security_component_service.cfg  security_component_service.rc
services/security_component_service/sa/sa_main/: app_mgr_death_recipient.cpp  app_mgr_death_recipient.h  app_state_observer.cpp  app_state_observer.h  delay_exit_task.cpp  delay_exit_task.h  first_use_dialog.cpp  first_use_dialog.h  sec_comp_entity.cpp  sec_comp_entity.h  sec_comp_info_helper.cpp  sec_comp_info_helper.h  sec_comp_manager.cpp  sec_comp_manager.h  sec_comp_perm_manager.cpp  sec_comp_perm_manager.h  sec_comp_service.cpp  sec_comp_service.h  sec_comp_stub.cpp  sec_comp_stub.h  sec_event_handler.cpp  sec_event_handler.h
services/security_component_service/sa/sa_profile/: 3506.xml  BUILD.gn
services/security_component_service/sa/test/: BUILD.gn
test/fuzztest/security_component/: BUILD.gn
test/fuzztest/security_component/getenhanceremoteobjectInner_fuzzer/: BUILD.gn  getenhanceremoteobjectInner_fuzzer.cpp  getenhanceremoteobjectInner_fuzzer.h
test/fuzztest/security_component/getenhanceremoteobject_fuzzer/: BUILD.gn  getenhanceremoteobject_fuzzer.cpp
test/fuzztest/security_component/getpointereventenhancedata_fuzzer/: BUILD.gn
test/fuzztest/security_component/reduceafterverifysavepermissionInner_fuzzer/: BUILD.gn  reduceafterverifysavepermissionInner_fuzzer.cpp
test/fuzztest/security_component/reduceafterverifysavepermission_fuzzer/: BUILD.gn
test/fuzztest/security_component/registersecuritycomponentInner_fuzzer/: BUILD.gn  registersecuritycomponentInner_fuzzer.cpp  registersecuritycomponentInner_fuzzer.h
test/fuzztest/security_component/registersecuritycomponent_fuzzer/: BUILD.gn  registersecuritycomponent_fuzzer.cpp
test/fuzztest/security_component/reportsecuritycomponentclickeventInner_fuzzer/: BUILD.gn  reportsecuritycomponentclickeventInner_fuzzer.cpp  reportsecuritycomponentclickeventInner_fuzzer.h
test/fuzztest/security_component/reportsecuritycomponentclickevent_fuzzer/: BUILD.gn  reportsecuritycomponentclickevent_fuzzer.cpp
test/fuzztest/security_component/setenhancecfg_fuzzer/: BUILD.gn
test/fuzztest/security_component/unregistersecuritycomponentInner_fuzzer/: BUILD.gn  unregistersecuritycomponentInner_fuzzer.cpp  unregistersecuritycomponentInner_fuzzer.h
test/fuzztest/security_component/unregistersecuritycomponent_fuzzer/: BUILD.gn  unregistersecuritycomponent_fuzzer.cpp
test/fuzztest/security_component/updatesecuritycomponentInner_fuzzer/: BUILD.gn  updatesecuritycomponentInner_fuzzer.cpp  updatesecuritycomponentInner_fuzzer.h
test/fuzztest/security_component/updatesecuritycomponent_fuzzer/: BUILD.gn  updatesecuritycomponent_fuzzer.cpp
(+45 files in other folders)
