# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_component/security_component.gni")
import("//build/ohos.gni")

group("security_component_build_module") {
  if (is_standard_system) {
    deps = [
      "${sec_comp_root_dir}/interfaces/inner_api/security_component:libsecurity_component_sdk",
      "${sec_comp_root_dir}/interfaces/inner_api/enhance_kits:libsecurity_component_enhance_sdk",
      "${sec_comp_root_dir}/services/security_component_service/sa:security_component_service",
      "${sec_comp_root_dir}/services/security_component_service/sa/sa_profile:security_component_sa_profile_standard",
    ]
  }
}

group("security_component_build_module_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "${sec_comp_root_dir}/interfaces/inner_api/security_component/test:unittest",
      "${sec_comp_root_dir}/interfaces/inner_api/enhance_kits/test:unittest",
      "${sec_comp_root_dir}/services/security_component_service/sa/test:unittest",
    ]
  }
}
