group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "getenhanceremoteobjectInner_fuzzer:GetEnhanceRemoteObjectInnerFuzzTest",
    "getenhanceremoteobject_fuzzer:GetEnhanceRemoteObjectFuzzTest",
    "getpointereventenhancedata_fuzzer:GetPointerEventEnhanceDataFuzzTest",
    "reduceafterverifysavepermissionInner_fuzzer:ReduceAfterVerifySavePermissionInnerFuzzTest",
    "reduceafterverifysavepermission_fuzzer:ReduceAfterVerifySavePermissionFuzzTest",
    "registersecuritycomponentInner_fuzzer:RegisterSecurityComponentInnerFuzzTest",
    "registersecuritycomponent_fuzzer:RegisterSecurityComponentFuzzTest",
    "reportsecuritycomponentclickeventInner_fuzzer:ReportSecurityComponentClickEventInnerFuzzTest",
    "reportsecuritycomponentclickevent_fuzzer:ReportSecurityComponentClickEventFuzzTest",
    "setenhancecfg_fuzzer:SetEnhanceCfgFuzzTest",
    "unregistersecuritycomponentInner_fuzzer:UnregisterSecurityComponentInnerFuzzTest",
    "unregistersecuritycomponent_fuzzer:UnregisterSecurityComponentFuzzTest",
    "updatesecuritycomponentInner_fuzzer:UpdateSecurityComponentInnerFuzzTest",
    "updatesecuritycomponent_fuzzer:UpdateSecurityComponentFuzzTest",
  ]
}
